...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22sp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:hint="Introduce username"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="22sp"
        android:layout_marginTop="44dp"
        android:hint="Introduce la contraseña"
        android:inputType="textPassword"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/bRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="22sp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/teal_700"
        android:text="Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>
